--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,6 +1,22 @@
 version: '3'
 
 services:
+
+  app:
+    build: 
+      context: node
+    container_name: app
+    entrypoint: dockerize -wait tcp://db:3306 -timeout 20s node index.js
+    networks:
+      - node-network
+    volumes: 
+      - ./node:/usr/src/app
+    ports:
+      - 3000:3000
+    tty: true
+    depends_on:
+      - db
+
   db:
     image: mysql:5.7
     command: --innodb-use-native-aio=0
