--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,12 +1,7 @@
 server {
     listen 80;
     listen [::]:80;
-
-    root /var/www/html;
-    index index.html index.htm index.nginx-devian.html;
-
-    server_name example.com www.example.com;
-
+    server_name localhost;
     location / {
       proxy_pass http://app:3000;
     }
