--- a/node/Dockerfile
+++ b/node/Dockerfile
@@ -9,6 +9,6 @@ RUN wget https://github.com/jwilder/dockerize/releases/download/$DOCKERIZE_VERSI
     && tar -C /usr/local/bin -xzvf dockerize-linux-amd64-$DOCKERIZE_VERSION.tar.gz \
     && rm dockerize-linux-amd64-$DOCKERIZE_VERSION.tar.gz
 
-EXPOSE 3000
+RUN npm update -y
 
-ENTRYPOINT [ "node", "index.js" ]
+EXPOSE 3000
