--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -7,12 +7,14 @@ services:
       context: node
     image: brunoan99/node-with-nginx
     container_name: app
-    entrypoint: dockerize -wait tcp://db:3306 -timeout 20s node index.js
+    entrypoint: dockerize -wait tcp://db:3306 -timeout 20s node src/index.js
     networks:
       - node-network
-    volumes: 
-      - ./node:/usr/src/app
     tty: true
+    volumes: 
+      - ./node/src/:/usr/src/app/src
+      - ./node/package.json:/usr/src/app/package.json
+      - ./node/package-lock.json:/usr/src/app/package-lock.json
     depends_on:
       - db
 
